--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,11 @@
             <div class="col-xs-12">
                 <!-- ON NUIT BLANCHE, UN COMMENT ME AND MY BUTTON FRIEND BELOW -->
 
+                <div class="row" id="survey">
+                    <h4>We'd love to hear how your experience went. Could you take two minutes and let us know?</h4>
+                    <a class="btn btn-default btn-block btn-lg" id="b3" href="https://fslash.typeform.com/to/ejTTFs">Take the FluxDelux Survey</a>
+                </div>
+
                 <div id='info'>
                     <h4>Welcome to <i>FluxDelux</i>!</h4>
                     <h4>If you're in our space at the <a href=
@@ -85,8 +90,6 @@ For more information, please visit us at  <a href = "peggybakerdance.com"> peggy
             <button class="btn btn-default btn-block btn-lg" id="b3" onclick=
             "checkout()">Check Out</button>
         </div>
-
-
     </div>
 
     <div class="container-fluid footer">
@@ -94,9 +97,9 @@ For more information, please visit us at  <a href = "peggybakerdance.com"> peggy
             <div class="col-xs-12">
               <p class="small">&#169; 2015 <a href=
               "http://peggybakerdance.com/">Peggy Baker Dance
-              Projects</a>,<a href=
+              Projects</a>, <a href=
               "https://www.youtube.com/watch?v=GqcaSqmvz_U">Luke
-              Garwood</a>, <a href="http://jacob-n.com/">Jacob
+              Garwood</a>, <a href="http://twitter.com/jakemoves">Jacob
               Niedzwiecki</a></p>
 
               <div class="col-xs-12" id="long-logo">
