--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@ For more information, please visit us at  <a href = "peggybakerdance.com"> peggy
                 </h4> -->
             </div>
         </div>
-        
+
         <div class="row" id="check-in">
           <form>
             <div class="form-group">
@@ -92,6 +92,50 @@ For more information, please visit us at  <a href = "peggybakerdance.com"> peggy
         </div>
     </div>
 
+    <!-- <div class="row" id="emergency">
+        <a href = "#page02"><button class="btn btn-default btn-block btn-lg" id="b4" onclick=
+        "loadScores()">PRESS ME FOR LIST OF SCORES</button>
+    </div> -->
+
+
+<div id="page02">
+      <div data-role="header">
+  <h2 style = "color: white; text-align: center"> Choose one of the scores below </h2>
+</div>
+<div data-role="content">
+
+
+  <div class="row">
+      <button class="btn btn-default btn-block btn-lg" id="b5">SimpleFlux</button>
+  </div>
+  <div class="row" >
+      <button class="btn btn-default btn-block btn-lg" id="b6" onclick=
+      "">Corners</button>
+  </div>
+  <div class="row">
+      <button class="btn btn-default btn-block btn-lg" id="b7" onclick=
+      "checkout()">ChipMelt</button>
+  </div>
+  <div class="row">
+      <button class="btn btn-default btn-block btn-lg" id="b8" onclick=
+      "checkout()">Ship</button>
+  </div>
+  <div class="row">
+      <button class="btn btn-default btn-block btn-lg" id="b9" onclick=
+      "checkout()">Hula</button>
+  </div>
+  <div class="row">
+      <button class="btn btn-default btn-block btn-lg" id="b10" onclick=
+      "checkout()">Orbitals</button>
+  </div>
+
+
+
+
+
+</div>
+</div>
+
     <div class="container-fluid footer">
         <div class="row">
             <div class="col-xs-12">
@@ -109,11 +153,19 @@ For more information, please visit us at  <a href = "peggybakerdance.com"> peggy
         </div>
       </div>
     </div>
+    <!--                   -->
+
+
+
+
+
+
+
 
     <script src=
-    "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
+    "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-     <script src="js/bootstrap.min.js"></script> <script src="js/fluxdelux.js"></script> 
+     <script src="js/bootstrap.min.js"></script> <script src="js/fluxdelux.js"></script>
 
      <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -125,5 +177,6 @@ For more information, please visit us at  <a href = "peggybakerdance.com"> peggy
       ga('send', 'pageview');
 
     </script>
+
 </body>
 </html>
