added layer so multiple files can't be triggered

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,8 @@
              </div>
           </div> -->
 
+          <div id = playerLayer></div>
+
     <div class="container" id="content">
         <div class="row">
             <div class="col-xs-12">
@@ -100,7 +102,7 @@ For more information, please visit us at  <a href = "peggybakerdance.com"> peggy
 
 <div id="page02">
       <div data-role="header">
-  <h2 style = "color: white; text-align: center"> Choose one of the scores below </h2>
+  <h2 style = "color: white; text-align: center" id = "manual"> Choose one of the scores below </h2>
 </div>
 <div data-role="content">
 
