First pass at control board

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
         <!-- <div id="head">
         <div id = "playerLayer">
             <!<div class="alert alert-success" role="alert">FluxDelux is running!</div> -->
-    </div>--&gt; <span id="loading"><img height="45%" src="img/loading.png"
+    </div> <span id="loading"><img height="45%" src="img/loading.png"
     width="45%"></span>
 
     <div class="container-fluid">
