Fixed some styling

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
              </div>
           </div> -->
 
-          <div id = playerLayer></div>
+          <div id = "playerLayer"></div>
 
     <div class="container" id="content">
         <div class="row">
@@ -100,43 +100,36 @@ For more information, please visit us at  <a href = "peggybakerdance.com"> peggy
     </div> -->
 
 
-<div id="page02">
-      <div data-role="header">
-  <h2 style = "color: white; text-align: center" id = "manual"> Choose one of the scores below </h2>
-</div>
-<div data-role="content">
+    <div id="page02" class="container">
+      <div class="row">
+          <div data-role="header">
+        <h2 style = "color: white; text-align: center" id = "manual"> Choose one of the scores below </h2>
+      </div>
 
-
-  <div class="row">
-      <button class="btn btn-default btn-block btn-lg" id="b5">SimpleFlux</button>
-  </div>
-  <div class="row" >
-      <button class="btn btn-default btn-block btn-lg" id="b6" onclick=
-      "">Corners</button>
-  </div>
-  <div class="row">
-      <button class="btn btn-default btn-block btn-lg" id="b7" onclick=
-      "checkout()">ChipMelt</button>
-  </div>
-  <div class="row">
-      <button class="btn btn-default btn-block btn-lg" id="b8" onclick=
-      "checkout()">Ship</button>
-  </div>
-  <div class="row">
-      <button class="btn btn-default btn-block btn-lg" id="b9" onclick=
-      "checkout()">Hula</button>
-  </div>
-  <div class="row">
-      <button class="btn btn-default btn-block btn-lg" id="b10" onclick=
-      "checkout()">Orbitals</button>
-  </div>
-
-
-
-
-
-</div>
-</div>
+      <div class="row">
+          <button class="btn btn-default btn-block btn-lg" id="b5">SimpleFlux</button>
+      </div>
+      <div class="row" >
+          <button class="btn btn-default btn-block btn-lg" id="b6" onclick=
+          "">Corners</button>
+      </div>
+      <div class="row">
+          <button class="btn btn-default btn-block btn-lg" id="b7" onclick=
+          "checkout()">ChipMelt</button>
+      </div>
+      <div class="row">
+          <button class="btn btn-default btn-block btn-lg" id="b8" onclick=
+          "checkout()">Ship</button>
+      </div>
+      <div class="row">
+          <button class="btn btn-default btn-block btn-lg" id="b9" onclick=
+          "checkout()">Hula</button>
+      </div>
+      <div class="row">
+          <button class="btn btn-default btn-block btn-lg" id="b10" onclick=
+          "checkout()">Orbitals</button>
+      </div>
+    </div>
 
     <div class="container-fluid footer">
         <div class="row">
