--- a/public/index.html
+++ b/public/index.html
@@ -103,7 +103,7 @@ For more information, please visit us at  <a href = "peggybakerdance.com"> peggy
     <div id="page02" class="container">
       <div class="row">
           <div data-role="header">
-        <h2 style = "color: white; text-align: center" id = "manual"> Choose one of the scores below </h2>
+        <h2 style = "color: white; text-align: center" id = "manual">Choose one of the scores below</h2>
       </div>
 
       <div class="row">
@@ -115,19 +115,19 @@ For more information, please visit us at  <a href = "peggybakerdance.com"> peggy
       </div>
       <div class="row">
           <button class="btn btn-default btn-block btn-lg" id="b7" onclick=
-          "checkout()">ChipMelt</button>
+          "">Chip and Melt</button>
       </div>
       <div class="row">
           <button class="btn btn-default btn-block btn-lg" id="b8" onclick=
-          "checkout()">Ship</button>
+          "">Ship</button>
       </div>
       <div class="row">
           <button class="btn btn-default btn-block btn-lg" id="b9" onclick=
-          "checkout()">Hula</button>
+          "">Hula Lasso</button>
       </div>
       <div class="row">
           <button class="btn btn-default btn-block btn-lg" id="b10" onclick=
-          "checkout()">Orbitals</button>
+          "">Orbitals</button>
       </div>
     </div>
 
