--- a/public/controlboard.html
+++ b/public/controlboard.html
@@ -68,7 +68,7 @@
         </div>
       </div>
 
-    <div>
+    </div>
 
     <div class="container">
       <div class="row" id="server-response">
