--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,8 @@
         <!-- <div id="head">
         <div id = "playerLayer">
             <!<div class="alert alert-success" role="alert">FluxDelux is running!</div> -->
-    </div> <span id="loading"><img height="45%" src="img/loading.png"
+    </div>
+    <span id="loading"><img height="45%" src="img/loading.png"
     width="45%"></span>
 
     <div class="container-fluid">
@@ -130,6 +131,7 @@ For more information, please visit us at  <a href = "peggybakerdance.com"> peggy
           "">Orbitals</button>
       </div>
     </div>
+  </div>
 
     <div class="container-fluid footer">
         <div class="row">
@@ -147,7 +149,7 @@ For more information, please visit us at  <a href = "peggybakerdance.com"> peggy
           </div>
         </div>
       </div>
-    </div>
+
     <!--                   -->
 
 
