--- a/public/controlboard.html
+++ b/public/controlboard.html
@@ -30,10 +30,10 @@
               <option value="0">Test Episode</option>
               <option value="1">Simple Flux</option>
               <option value="2">Corners</option>
-              <option value="3">Chip and Melt</option>
-              <option value="4">Hula Lasso</option>
-              <option value="5">Ship</option>
-              <option value="6">Orbitals</option>
+              <option value="3">Ship</option>
+              <option value="4">Chip Melt</option>
+              <option value="5">Orbitals</option>
+              <option value="6">Hula Lasso</option>
             </select>
           </div>
           <!--<div class="form-group">
