Added single-group scores

--- a/controlboard.html
+++ b/controlboard.html
@@ -34,6 +34,8 @@
               <option value="4">Hula Lasso</option>
               <option value="5">Orbitals</option>
               <option value="6">Ship</option>
+              <option value="7">Ship Together</option>
+              <option value="7">Chip Melt Together</option>
             </select>
           </div>
           <!--<div class="form-group">
