Updated info for Ottawa

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <!-- ON NUIT BLANCHE, UN COMMENT ME AND MY BUTTON FRIEND BELOW -->
-
+                <!--
                 <div class="row" id="survey">
                     <h4>We'd love to hear how your experience went. Could you take two minutes and let us know?</h4>
                     <a class="btn btn-default btn-block btn-lg" id="b3" href="https://fslash.typeform.com/to/ejTTFs">Take the FluxDelux Survey</a>
@@ -55,23 +55,20 @@
                 <div id='info'>
                     <h4>Welcome to <i>FluxDelux</i>!</h4>
                     <h4>If you're in our space at the <a href=
-                    "https://www.google.ca/maps?client=safari&rls=en&q=trinity+community+recreation+centre&oe=UTF-8&gfe_rd=cr&um=1&ie=UTF-8&sa=X&ved=0CAcQ_AUoAWoVChMIhtr7--elyAIVyXE-Ch1fyQw1">
-                    Trinity Community Recreation Center</a>, enter the check-in
+                    "https://www.google.ca/maps/place/Carleton+University+Conference+Services/@45.3871615,-75.699481,17z/data=!3m1!4b1!4m2!3m1!1s0x4cce05d910840183:0x5df37779017e6a0a">
+                    Carleton University Residence Commons Conference Centre</a>, enter the check-in
                     passcode.</h4>
-                </div>
+                </div>-->
 
                 <!-- BEFORE NUIT BLANCHE -->
-                <!-- <h4 id = 'info'>
-                  Thanks for visiting <i>FluxDelux</i>.<br>
+                <h4 id = 'info'>
+                Thanks for visiting <i>FluxDelux</i>.<br>
 
-On the night of Nuit Blanche you’ll be able to use this site to participate in <i>FluxDelux </i>if you do not have an iOS device.
-If you do have an iOS device, visit the app store to download the <i>FluxDelux</i> app <a href ="https://geo.itunes.apple.com/us/app/fluxdelux/id997524033?mt=8"> here </a>. <br>
+                On Sunday, November 22 you’ll be able to use this site to participate in <i>FluxDelux</i> if you do not have an iOS device.<a href=" http://peggybakerdance.com/upcoming/fluxdelux-in-ottawa">Register for Sunday's workshop.</a>
+                If you do have an iOS device, visit the app store to download the <i>FluxDelux</i> app <a href ="https://geo.itunes.apple.com/us/app/fluxdelux/id997524033?mt=8"> here </a>. <br>
 
-For more information, please visit us at  <a href = "peggybakerdance.com"> peggybakerdance.com</a> or <a href = "http://www.scotiabanknuitblanche.ca/project.html?project_id=1649">scotiabanknuitblanche.ca</a>.
-
-
-
-                </h4> -->
+                For more information, please visit us at  <a href = "peggybakerdance.com"> peggybakerdance.com.</a>
+                </h4>
             </div>
         </div>
 
