--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
 
                 <!-- BEFORE NUIT BLANCHE -->
                 <h4 id = 'info'>
-                On Sunday, November 22 you’ll be able to use this site to participate in <i>FluxDelux</i> if you do not have an iOS device. <a href=" http://peggybakerdance.com/upcoming/fluxdelux-in-ottawa">Register for Sunday's workshop.</a><br/><br/>
+                On Sunday, November 22 you’ll be able to use this site to participate in <i>FluxDelux</i> if you do not have an iOS device. <br/><a href=" http://peggybakerdance.com/upcoming/fluxdelux-in-ottawa">Register for Sunday's workshop.</a><br/><br/>
                 If you do have an iOS device, visit the app store to download the <i>FluxDelux</i> app <a href ="https://geo.itunes.apple.com/us/app/fluxdelux/id997524033?mt=8"> here </a>. <br/><br/>
 
                 For more information, please visit us at  <a href = "peggybakerdance.com"> peggybakerdance.com.</a>
