--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
               <input type="text" class="form-control" id="passcode" placeholder="Passcode">
             </div>
           </form>
-          <button class="btn btn-default btn-block btn-lg" id="b2" onclick="checkin()">Check In</button>
+          <button class="btn btn-default btn-block btn-lg" id="b2" onclick="checkinManually()">Check In</button>
         </div>
 
         <div class="row" id="episode-confirm">
@@ -164,7 +164,9 @@
     <script src=
     "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-     <script src="js/bootstrap.min.js"></script> <script src="js/fluxdelux.js"></script>
+     <script src="js/bootstrap.min.js"></script>
+     <script src="js/fluxdelux.js"></script>
+     <script src="js/js.cookie.js"></script>
 
      <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
