Adjusted user confirmation copy

--- a/public/index.html
+++ b/public/index.html
@@ -79,8 +79,8 @@
         </div>
 
         <div class="row" id="episode-confirm">
-            <button class="btn btn-default btn-block" id="b1" onclick=
-            "load()">I'm ready</button>
+            <button class="btn btn-default btn-block btn-lg" id="b1" onclick=
+            "load()">Allow audio playback</button>
         </div>
 
         <div class="row" id="check-out">
