NOT TESTED, added new audio files

--- a/public/controlboard.html
+++ b/public/controlboard.html
@@ -34,6 +34,8 @@
               <option value="4">Chip Melt</option>
               <option value="5">Orbitals</option>
               <option value="6">Hula Lasso</option>
+              <option value="7">Chip Melt Together</option>
+              <option value="8">Ship Together</option>
             </select>
           </div>
           <!--<div class="form-group">
