--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@ For more information, please visit us at  <a href = "peggybakerdance.com"> peggy
       </div>
       <div class="row">
           <button class="btn btn-default btn-block btn-lg" id="b7" onclick=
-          "">Chip and Melt</button>
+          "">Chip Melt</button>
       </div>
       <div class="row">
           <button class="btn btn-default btn-block btn-lg" id="b8" onclick=
@@ -130,6 +130,15 @@ For more information, please visit us at  <a href = "peggybakerdance.com"> peggy
           <button class="btn btn-default btn-block btn-lg" id="b10" onclick=
           "">Orbitals</button>
       </div>
+      <div class="row">
+          <button class="btn btn-default btn-block btn-lg" id="b11" onclick=
+          "">Chip Melt Together</button>
+      </div>
+      <div class="row">
+          <button class="btn btn-default btn-block btn-lg" id="b12" onclick=
+          "">Ship Together</button>
+      </div>
+
     </div>
   </div>
 
