Finished basic Events API

--- a/public/index.html
+++ b/public/index.html
@@ -53,10 +53,13 @@
                 </div>
 
                 <div id='info'>
-                    <h4>Welcome to <i>FluxDelux</i>!</h4>
+                    <p>a multiplayer, real-world dance game for players of all abilities (ages 9–90)</p>
+                    <h4>Upcoming FluxDelux Events</h4>
+
+                    <!-- <h4>Welcome to <i>FluxDelux</i>!</h4>
                     <h4>If you're in our space at the <a href=
                     "https://www.google.ca/maps/place/Carleton+University+Conference+Services/@45.3871615,-75.699481,17z/data=!3m1!4b1!4m2!3m1!1s0x4cce05d910840183:0x5df37779017e6a0a">
-                    Carleton University Residence Commons Conference Centre</a>, enter the check-in passcode.</h4>
+                    Carleton University Residence Commons Conference Centre</a>, enter the check-in passcode.</h4> -->
                 </div>
 
                 <!-- BEFORE NUIT BLANCHE -->
@@ -165,8 +168,9 @@
     "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
      <script src="js/bootstrap.min.js"></script>
-     <script src="js/fluxdelux.js"></script>
      <script src="js/js.cookie.js"></script>
+     <script src="js/moment.js"></script>
+     <script src="js/fluxdelux.js"></script>
 
      <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
