--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
-    <title>FluxDelux</title><!-- Bootstrap -->
+    <meta name="description" content="Flux Delux marries contemporary dance with cutting-edge new media technology through a tailor-made iOS app, designed by Peggy Baker Dance projects along with creative technologist Jacob Niedzwiecki. Spontaneous group choreography is created through movement instructions, delivered to pedestrians and wheelchair users via the app, though earphones.">
+    <title>FluxDelux</title>
+    <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="flux.css" rel="stylesheet">
 </head>
@@ -29,24 +30,13 @@
         </div>
     </div>
 
-    <!-- THIS IS THE VIDEO BELOW. KEPT IT HERE JUST IN CASE -->
-    <!-- <div class = "container-fluid">
-          <div class = "row">
-            <div class = "embed-responsive embed-responsive-16by9">
-                            <iframe  class="embed-responsive-item"
-                    src="https://www.youtube.com/embed/SJwnv3CgTGw?rel=0&amp;showinfo=0">
-                                </iframe>
 
-             </div>
-          </div> -->
-
-          <div id = "playerLayer"></div>
+    <div id="playerLayer"></div>
 
     <div class="container" id="content">
         <div class="row">
             <div class="col-xs-12">
-                <!-- ON NUIT BLANCHE, UN COMMENT ME AND MY BUTTON FRIEND BELOW -->
-                
+
                 <div class="row" id="survey">
                     <h4>We'd love to hear how your experience went. Could you take two minutes and let us know?</h4>
                     <a class="btn btn-default btn-block btn-lg" id="b3" href="https://fslash.typeform.com/to/ejTTFs">Take the FluxDelux Survey</a>
@@ -59,125 +49,104 @@
                     Carleton University Residence Commons Conference Centre</a>, enter the check-in passcode.</h4>
                 </div>
 
-                <!-- BEFORE NUIT BLANCHE -->
-                <!--<h4 id = 'info'>
-                On Sunday, November 22 you’ll be able to use this site to participate in <i>FluxDelux</i> if you do not have an iOS device. <br/><a href=" http://peggybakerdance.com/upcoming/fluxdelux-in-ottawa">Register for Sunday's workshop.</a><br/><br/>
-                If you do have an iOS device, visit the app store to download the <i>FluxDelux</i> app <a href ="https://geo.itunes.apple.com/us/app/fluxdelux/id997524033?mt=8"> here </a>. <br/><br/>
-
-                For more information, please visit us at  <a href = "peggybakerdance.com"> peggybakerdance.com.</a>
-                </h4>-->
             </div>
         </div>
 
         <div class="row" id="check-in">
-          <form>
-            <div class="form-group">
-              <input type="text" class="form-control" id="passcode" placeholder="Passcode">
-            </div>
-          </form>
-          <button class="btn btn-default btn-block btn-lg" id="b2" onclick="checkinManually()">Check In</button>
+            <form>
+                <div class="form-group">
+                    <input type="text" class="form-control" id="passcode" placeholder="Passcode">
+                </div>
+            </form>
+            <button class="btn btn-default btn-block btn-lg" id="b2" onclick="checkinManually()">Check In</button>
         </div>
 
         <div class="row" id="episode-confirm">
-            <button class="btn btn-default btn-block btn-lg" id="b1" onclick=
-            "load()">Allow audio playback</button>
+            <button class="btn btn-default btn-block btn-lg" id="b1" onclick="load()">Allow audio playback</button>
         </div>
 
         <div class="row" id="check-out">
-            <button class="btn btn-default btn-block btn-lg" id="b3" onclick=
-            "checkout()">Check Out</button>
+            <button class="btn btn-default btn-block btn-lg" id="b3" onclick="checkout()">Check Out</button>
         </div>
     </div>
 
-    <!-- <div class="row" id="emergency">
-        <a href = "#page02"><button class="btn btn-default btn-block btn-lg" id="b4" onclick=
-        "loadScores()">PRESS ME FOR LIST OF SCORES</button>
-    </div> -->
 
-
+<!--The below only appears if the passcode for manual start is entered-->
     <div id="page02" class="container">
-      <div class="row">
-          <div data-role="header">
-        <h2 style = "color: white; text-align: center" id = "manual">Choose one of the scores below</h2>
-      </div>
 
-      <div class="row">
-          <button class="btn btn-default btn-block btn-lg" id="b5">SimpleFlux</button>
-      </div>
-      <div class="row" >
-          <button class="btn btn-default btn-block btn-lg" id="b6" onclick=
-          "">Corners</button>
-      </div>
-      <div class="row">
-          <button class="btn btn-default btn-block btn-lg" id="b7" onclick=
-          "">Chip and Melt</button>
-      </div>
-      <div class="row">
-          <button class="btn btn-default btn-block btn-lg" id="b8" onclick=
-          "">Ship</button>
-      </div>
-      <div class="row">
-          <button class="btn btn-default btn-block btn-lg" id="b9" onclick=
-          "">Hula Lasso</button>
-      </div>
-      <div class="row">
-          <button class="btn btn-default btn-block btn-lg" id="b10" onclick=
-          "">Orbitals</button>
-      </div>
-      <div class="row">
-          <button class="btn btn-default btn-block btn-lg" id="b11" onclick=
-          "">Ship Together</button>
-      </div>
-      <div class="row">
-          <button class="btn btn-default btn-block btn-lg" id="b12" onclick=
-          "">Chip Melt Together</button>
-      </div>
-    </div>
-  </div>
-
-    <div class="container-fluid footer">
         <div class="row">
-            <div class="col-xs-12">
-              <p class="small">&#169; 2015 <a href=
-              "http://peggybakerdance.com/">Peggy Baker Dance
-              Projects</a>, <a href=
-              "https://www.youtube.com/watch?v=GqcaSqmvz_U">Luke
+            <div data-role="header">
+                <h2 style="color: white; text-align: center" id="manual">Choose one of the scores below</h2>
+            </div>
+
+            <div class="form-group">
+
+                <select name="manualEpisodeChoice" id="manualEpisodeChoice" class="form-control">
+                    <option value="0">Simple Flux</option>
+                    <option value="1">Corners</option>
+                    <option value="2">Ship</option>
+                    <option value="3">Chip and Melt</option>
+                    <option value="4">Orbitals</option>
+                    <option value="5">Hula Lasso</option>
+                    <option value="6">Ship Together</option>
+                    <option value="7">Chip Melt Together</option>
+                </select>
+            </div>
+            <button class="btn btn-default btn-block btn-lg" id="submitChoice" onclick="manualGo()"> Submit Choice</button>
+
+
+        </div>
+
+        <div class="container-fluid footer">
+            <div class="row">
+                <div class="col-xs-12">
+                    <p class="small">&#169; 2015 <a href="http://peggybakerdance.com/">Peggy Baker Dance
+              Projects</a>, <a href="https://www.youtube.com/watch?v=GqcaSqmvz_U">Luke
               Garwood</a>, <a href="http://twitter.com/jakemoves">Jacob
               Niedzwiecki</a></p>
 
-              <div class="col-xs-12" id="long-logo">
-                  <embed src="img/bottom.svg" type="image/svg+xml">
-              </div>
-          </div>
+                    <div class="col-xs-12" id="long-logo">
+                        <embed src="img/bottom.svg" type="image/svg+xml">
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
 
-    <!--                   -->
-
-
+    </div>
+    <!-- end of page02-->
 
 
 
 
 
 
-    <script src=
-    "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-     <script src="js/bootstrap.min.js"></script>
-     <script src="js/fluxdelux.js"></script>
-     <script src="js/js.cookie.js"></script>
 
-     <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-41442660-5', 'auto');
-      ga('send', 'pageview');
 
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/fluxdelux.js"></script>
+    <script src="js/js.cookie.js"></script>
+
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-41442660-5', 'auto');
+        ga('send', 'pageview');
     </script>
 
 </body>
+
 </html>
