--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
 
         <div class="row">
             <div data-role="header">
-                <h2 style="color: white; text-align: center" id="manual">Choose one of the scores below</h2>
+                <h2 style="color: white; text-align: center" id="manual">Choose a score from dropdown</h2>
             </div>
 
             <div class="form-group">
