tried to do more posting andgetting, not tested

--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
                     <option value="7">Chip Melt Together</option>
                 </select>
             </div>
-            <button class="btn btn-default btn-block btn-lg" id="submitChoice" onclick="manualGo()"> Submit Choice</button>
+            <button class="btn btn-default btn-block btn-lg formButton" onclick="manualGo()"> Submit Choice</button>
 
 
         </div>
