--- a/public/admin.html
+++ b/public/admin.html
@@ -53,7 +53,7 @@
             
             <div class="form-group col-xs-12 col-md-4">
                 <label for="date">Date</label>
-                <input type="date" class="form-control" id="date">
+                <input type="text" class="form-control" id="date" placeholder="March 5, 2016">
             </div>
             <div class="form-group col-xs-12 col-md-4">
                 <label for="doorsOpen">Time That Doors Open</label>
