added more styling to events lists

--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,8 @@
                 </div>
 
                 <div id='info'>
-                    <p>a multiplayer, real-world dance game for players of all abilities (ages 9–90)</p>
-                    <h4>Upcoming FluxDelux Events</h4>
+                    <h5 class="text-center">a multiplayer, real-world dance game for players of all abilities (ages 9–90)</h5>
+                    <h3>&nbsp &nbsp &nbsp Upcoming FluxDelux Events</h3>
 
                     <!-- <h4>Welcome to <i>FluxDelux</i>!</h4>
                     <h4>If you're in our space at the <a href=
@@ -76,7 +76,7 @@
     </div>
 
 
-<!--The below only appears if the passcode for manual start is entered-->
+<!--The below only appears if "Flux" is clicked at the bottom of the page for manual start-->
     <div id="page02" class="container">
 
         <div class="row">
