tweeked events list spacing

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
                 </div>
 
                 <div id='info'>
-                    <h5 class="text-center">a multiplayer, real-world dance game for players of all abilities (ages 9–90)</h5>
+                    <h5 id = "tagline" class="text-center">a multiplayer, real-world dance game for players of all abilities (ages 9–90)</h5>
                     <h3>&nbsp &nbsp &nbsp Upcoming FluxDelux Events</h3>
 
                     <!-- <h4>Welcome to <i>FluxDelux</i>!</h4>
