--- a/public/admin.html
+++ b/public/admin.html
@@ -142,7 +142,11 @@
     <script src=
     "https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script> <script src="js/admin.js"></script>
+     <script src="js/bootstrap.min.js"></script>
+     <script src="js/js.cookie.js"></script>
+     <script src="js/moment.js"></script>
+     <script src="js/fluxdelux.js"></script>
+    <script src="js/admin.js"></script>
 
 </body>
 </html>
