latest post try

--- a/public/admin.html
+++ b/public/admin.html
@@ -91,7 +91,7 @@
                 <input type="text" class="form-control" id="_id" placeholder="yHv4AKo4Cy01ippO">
             </div>
             
-    <button type="submit" class="btn btn-default btn-lg formButton" onclick="formSubmit()">Create Event</button>
+    <button class="btn btn-default btn-lg formButton" onclick="formSubmit()">Create Event</button>
             
             <hr>
             <hr>
