changed styling for events listing, started working on delete event in admin form

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 
                 <div id='info'>
                     <h5 id = "tagline" class="text-center">a multiplayer, real-world dance game for players of all abilities (ages 9–90)</h5>
-                    <h3>&nbsp &nbsp &nbsp Upcoming FluxDelux Events</h3>
+                    <h3 style="text-align: center">Upcoming FluxDelux Events</h3>
 
                     <!-- <h4>Welcome to <i>FluxDelux</i>!</h4>
                     <h4>If you're in our space at the <a href=
