--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 
     <div class="container" id="content">
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-xs-12 col-sm-8 col-sm-offset-3 col-md-6 col-md-offset-3">
 
                 <div class="row" id="survey">
                     <h4>We'd love to hear how your experience went. Could you take two minutes and let us know?</h4>
@@ -38,8 +38,8 @@
                 </div>
 
                 <div id='info'>
-                    <h5 id = "tagline" class="text-center">a multiplayer, real-world dance game for players of all abilities (ages 9–90)</h5>
-                    <h3 style="text-align: center">Upcoming FluxDelux Events</h3>
+                    <h5 id = "tagline" class="col-xs-12 text-center">a multiplayer, real-world dance game for players of all abilities (ages 9–90)</h5>
+                    <h3 style="text-align: center; padding-bottom: 10px">Upcoming FluxDelux Events</h3>
 
                     <!-- <h4>Welcome to <i>FluxDelux</i>!</h4>
                     <h4>If you're in our space at the <a href=
