--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta name="apple-itunes-app" content="app-id=997524033">
     <meta name="description" content="A multiplayer, real-world dance game for players of all abilities (ages 9–90). Flux Delux marries contemporary dance with cutting-edge new media technology through a tailor-made iOS app, designed by Peggy Baker Dance projects along with creative technologist Jacob Niedzwiecki. Spontaneous group choreography is created through movement instructions, delivered to pedestrians and wheelchair users via the app, though earphones.">
     <title>FluxDelux</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
