--- a/public/index.html
+++ b/public/index.html
@@ -54,13 +54,11 @@
         </div>
 
         <div class="row" id="check-in">
-<!--
-            <form>
+            <form style="display: none">
                 <div class="form-group">
                     <input type="text" class="form-control" id="passcode" placeholder="Passcode">
                 </div>
             </form>
--->
             <button class="btn btn-default btn-block btn-lg" id="b2" onclick="checkinManually()">Check In</button>
         </div>
 
