Removed date format coercion on form submit

--- a/public/admin.html
+++ b/public/admin.html
@@ -59,16 +59,16 @@
        
             <div class="form-group col-xs-12 col-md-4 bfh-timepicker" data-mode="12h">
                 <label for="doorsOpenTime">Time That Doors Open</label>
-                <input type="time" class="form-control" id="doorsOpenTime">
+                <input type="text" class="form-control" id="doorsOpenTime">
             </div>
         
             <div class="form-group col-xs-12 col-md-4">
                 <label for="startTime">Start Time</label>
-                <input type="time" class="form-control" id="startTime">
+                <input type="text" class="form-control" id="startTime">
             </div>
             <div class="form-group col-xs-12 col-md-4">
                 <label for="endTime">End Time</label>
-                <input type="time" class="form-control" id="endTime">
+                <input type="text" class="form-control" id="endTime">
             </div>
         </div> 
             <hr>
