--- a/public/admin.html
+++ b/public/admin.html
@@ -56,40 +56,41 @@
                 <input type="text" class="form-control" id="date" placeholder="March 5, 2016">
             </div>
             <div class="clearfix"></div> 
-            <div class="form-group col-xs-3 col-md-1">
-                <label for="doorsOpenTime">Doors Open (24 hour)</label>
+            <div class="form-group-inline col-xs-4 col-md-2">
+                <label for="doorsOpenTime">Doors Open (hour)</label>
                 <select class="form-control"id="doorsOpenTime">
                 </select>
             </div>
-            <div class="form-group col-xs-3 col-md-1">
+            <div class="form-group-inline col-xs-4 col-md-2">
                 <label for="doorsOpenTimeMin">Doors Open (min)</label>
                 <select class="form-control"id="doorsOpenTimeMin">
                 </select>
             </div>
             <div class="clearfix"></div> 
-            <div class="form-group col-xs-3 col-md-1 col-md-offset-1">
-                <label for="startTime">Start Time (24 hour)</label>
+            <div class="form-group-inline col-xs-4 col-md-2">
+                <label for="startTime">Start Time (hour)</label>
                 <select class="form-control"id="startTime">
                 </select>
             </div>
-            <div class="form-group col-xs-3 col-md-1">
+            <div class="form-group-inline col-xs-4 col-md-2">
                 <label for="startTime">Start Time (min)</label>
                 <select class="form-control"id="startTimeMin">
                 </select>
             </div>
         <div class="clearfix"></div> 
-           <div class="form-group col-xs-3 col-md-1 col-md-offset-1">
-                <label for="endTime">End Time (24 hour)</label>
+           <div class="form-group-inline col-xs-4 col-md-2">
+                <label for="endTime">End Time (hour)</label>
                 <select class="form-control"id="endTime">
                 </select>
             </div>
-            <div class="form-group col-xs-3 col-md-1">
+            <div class="form-group-inline col-xs-4 col-md-2">
                 <label for="endTimeMin">End Time (min)</label>
                 <select class="form-control"id="endTimeMin">
                 </select>
             </div>
         
         <div class="clearfix"></div> 
+        <small> &nbsp (please note: all times must be input in the 24 hour format)</small>
             <hr>
            
             <div class="form-group col-xs-6 col-md-6">
