--- a/public/admin.html
+++ b/public/admin.html
@@ -56,10 +56,17 @@
                 <input type="text" class="form-control" id="date" placeholder="March 5, 2016">
             </div>
             <div class="clearfix"></div> 
+<!--
             <div class="form-group-inline col-xs-4 col-md-2">
                 <label for="doorsOpenTime">Doors Open (hour)</label>
                 <select class="form-control"id="doorsOpenTime">
                 </select>
+            </div>
+-->
+        <div class="form-group-inline col-xs-4 col-md-2">
+                <label for="doorsOpenTime">Doors Open (hour)</label>
+                 <input type="text" class="form-control" id="doorsOpenTime" placeholder="March 5, 2016">
+                
             </div>
             <div class="form-group-inline col-xs-4 col-md-2">
                 <label for="doorsOpenTimeMin">Doors Open (min)</label>
