added date dropdown

--- a/public/admin.html
+++ b/public/admin.html
@@ -51,22 +51,32 @@
             <div class="clearfix"></div> 
             <hr>
              
+<!--
             <div class="form-group col-xs-12 col-md-4">
                 <label for="date">Date</label>
                 <input type="text" class="form-control" id="date" placeholder="March 5, 2016">
             </div>
+-->     <h4 class="text-left">Date and Time of Event</h4>
+        <div class="form-group-inline col-xs-4 col-md-2">
+                <label for="dateYear">Year</label>
+                <select class="form-control"id="dateYear">
+                </select>
+            </div>
+        <div class="form-group-inline col-xs-4 col-md-2">
+                <label for="dateMonth">Month</label>
+                <select class="form-control"id="dateMonth">
+                </select>
+            </div>
+        <div class="form-group-inline col-xs-4 col-md-2">
+                <label for="dateDay">Day</label>
+                <select class="form-control"id="dateDay">
+                </select>
+            </div>
             <div class="clearfix"></div> 
-<!--
             <div class="form-group-inline col-xs-4 col-md-2">
                 <label for="doorsOpenTime">Doors Open (hour)</label>
                 <select class="form-control"id="doorsOpenTime">
                 </select>
-            </div>
--->
-        <div class="form-group-inline col-xs-4 col-md-2">
-                <label for="doorsOpenTime">Doors Open (hour)</label>
-                 <input type="text" class="form-control" id="doorsOpenTime" placeholder="March 5, 2016">
-                
             </div>
             <div class="form-group-inline col-xs-4 col-md-2">
                 <label for="doorsOpenTimeMin">Doors Open (min)</label>
