minor tweek, time and date now working

--- a/public/admin.html
+++ b/public/admin.html
@@ -56,7 +56,7 @@
                 <label for="date">Date</label>
                 <input type="text" class="form-control" id="date" placeholder="March 5, 2016">
             </div>
--->     <h4 class="text-left">Date and Time of Event</h4>
+-->     <h4 class="text-left"> &nbsp &nbsp Date and Time of Event</h4>
         <div class="form-group-inline col-xs-4 col-md-2">
                 <label for="dateYear">Year</label>
                 <select class="form-control"id="dateYear">
