minor tweek, things seem to be working now

--- a/public/admin.html
+++ b/public/admin.html
@@ -107,7 +107,7 @@
             </div>
         
         <div class="clearfix"></div> 
-        <small> &nbsp (please note: all times must be input in the 24 hour format)</small>
+        <small> &nbsp &nbsp(please note: all times must be input in the 24 hour format)</small>
             <hr>
            
             <div class="form-group col-xs-6 col-md-6">
