--- a/public/index.html
+++ b/public/index.html
@@ -44,17 +44,17 @@
                     <h5 id = "tagline" class="col-xs-12 text-center">a multiplayer, real-world dance game for players of all abilities (ages 9–90)</h5>
                     <h3 style="text-align: center; padding-bottom: 10px">Upcoming FluxDelux Events</h3>
 
-                    <!-- <h4>Welcome to <i>FluxDelux</i>!</h4>
+                    <h4>Welcome to <i>FluxDelux</i>!</h4>
                     <h4>If you're in our space at the <a href=
                     "https://www.google.ca/maps/place/Carleton+University+Conference+Services/@45.3871615,-75.699481,17z/data=!3m1!4b1!4m2!3m1!1s0x4cce05d910840183:0x5df37779017e6a0a">
-                    Carleton University Residence Commons Conference Centre</a>, enter the check-in passcode.</h4> -->
+                    Carleton University Residence Commons Conference Centre</a>, enter the check-in passcode.</h4>
                 </div>
 
             </div>
         </div>
 
         <div class="row" id="check-in">
-            <form style="display: none">
+            <form>
                 <div class="form-group">
                     <input type="text" class="form-control" id="passcode" placeholder="Passcode">
                 </div>
