Added white light parkette episode and started code changes

--- a/public/controlboard.html
+++ b/public/controlboard.html
@@ -27,15 +27,7 @@
           <div class="form-group">
             <label for="control-episode">Episode</label>
             <select name="control-episode" id="control-episode" class="form-control">
-              <option value="0">Test Episode</option>
-              <option value="1">Simple Flux</option>
-              <option value="2">Corners</option>
-              <option value="3">Ship</option>
-              <option value="4">Chip Melt</option>
-              <option value="5">Orbitals</option>
-              <option value="6">Hula Lasso</option>
-              <option value="7">Ship Together</option>
-              <option value="8">Chip Melt Together</option>
+              <option value="0">White Light Parkette</option>
             </select>
           </div>
           <!--<div class="form-group">
